# natlas

./: .codeclimate.yml  .flake8  .gitignore  .opencensus-dev.yml  .otel-collector-dev.yml  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  blacklist.txt  dependabot.yml  docker-compose.yml  elastic-fixctime.sh  fix-index.sh  getheadshot.py  install.sh  lgtm.yml  main.py  manage.py  masscan-upload.py  masscan.sh  models.py  models_elastic.py  myscopefile.txt  nmap-agent.py  nmap-scanner.py  nmap_helper.py  nweb_agent.py  nweb_server.py  ports.txt  pyproject.toml  release.sh  (+9 more)
.circleci/: config.yml
natlas-agent/: .dockerignore  Dockerfile  Pipfile  README.md  chrome.json  config.py  getheadshot.py  natlas-agent.py  natlaslogging.py  natlasnet.py  natlasutils.py  nweb_agent.py  pyproject.toml  requirements.txt  run-agent.sh  scanresult.py  screenshotutils.py  setup-agent.sh
natlas-agent/deployment/: natlas-agent.service
natlas-agent/natlas/: error_reporting.py  logging.py  net.py  scan_work.py  scanresult.py  screenshot_models.py  screenshots.py  threadscan.py  utils.py
natlas-server/: .dockerignore  .eslintrc.yml  .scss-lint.yml  .stylelintrc.yml  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  add-admin.py  add-scope.py  add-user.py  config.py  elastic-snapshot.py  entrypoint.sh  natlas-db.py  natlas-migrate.py  natlas-server.py  package.json  pyproject.toml  requirements.txt  run-server.sh  setup-elastic.sh  setup-server.sh  tsconfig.json  tslint.json  webpack.config.js
natlas-server/app/: __init__.py  config_loader.py  cyclicprng.py  elastic.py  email.py  filters.py  forms.py  imageclusterengine.py  ipscanmanager.py  models.py  nmap_parser.py  routes.py  scope.py  url_converters.py  util.py
natlas-server/app/admin/: __init__.py  forms.py  redirects.py  routes.py
natlas-server/app/api/: __init__.py  prepare_work.py  rescan_handler.py  routes.py  utils.py
natlas-server/app/api/processing/: screenshot.py  ssl.py
natlas-server/app/auth/: __init__.py  email.py  forms.py  routes.py  wrappers.py
natlas-server/app/cli/: scope.py  user.py
natlas-server/app/elastic/: __init__.py  client.py  host.py  indices.py  interface.py
natlas-server/app/errors/: __init__.py  errors.py  handlers.py  http_error.py  responses.py
natlas-server/app/host/: __init__.py  forms.py  migrators.py  routes.py  summarizers.py
natlas-server/app/instrumentation/: __init__.py  sentryio_middleware.py
natlas-server/app/main/: __init__.py  forms.py  pagination.py  routes.py
natlas-server/app/models/: __init__.py  agent.py  agent_config.py  agent_script.py  config_item.py  dict_serializable.py  email_token.py  natlas_services.py  rescan_task.py  scope_item.py  scope_log.py  tag.py  token_validation.py  user.py  user_invitation.py
natlas-server/app/scope/: __init__.py  cyclicprng.py  ipscanmanager.py  scan_group.py  scan_manager.py  scope.py  scope_collection.py  scope_group.py  scope_manager.py
natlas-server/app/static/: browserconfig.xml  global.d.ts  natlas.js  natlas.scss
natlas-server/app/static/conf/: particles-active.ts  particles-static.ts  particles.ts
natlas-server/app/static/controls/: natlas-tagging.js  natlas-tagging.ts  user-profile.ts
natlas-server/app/static/css/: colors.scss  dashboard.css  globals.scss  landing-page.scss  status-page.scss
natlas-server/app/static/js/: natlas-tagging.js  natlas.js
natlas-server/app/static/pages/: login.ts
natlas-server/app/static/util/: error-tracking.ts  system-status.ts  version-check.ts  xhr.ts
natlas-server/app/templates/: base.html  screenshots.html  search.html
natlas-server/app/templates/admin/: _header.html  _scope_menu.html  _tagmodal.html  agents.html  blacklist.html  index.html  logs.html  scope.html  services.html  tags.html  users.html
natlas-server/app/templates/auth/: accept_invite.html  login.html  password_reset.html  register.html
natlas-server/app/templates/email/: reset_password.txt  user_invite.txt
natlas-server/app/templates/errors/: 400.html  404.html  405.html  500.html  503.html  search.html
natlas-server/app/templates/host/: _header.html  _host-export.html  _host-row-history.html  _host-row.html  _imagemodal.html  _port-info.html  headshots.html  history.html  screenshots.html  summary.html
natlas-server/app/user/: __init__.py  forms.py  routes.py
natlas-server/config/: .gitignore
natlas-server/defaults/: db_configs.json  natlas-services
natlas-server/defaults/elastic/: mapping.json
natlas-server/deployment/: natlas-server.service  nginx
natlas-server/hooks/: build
natlas-server/migrations/: env.py  migrator.py
natlas-server/migrations/versions/: 09ac195ca9c7_better_agent_config_control.py  26d2ee2d52bf_make_fields_not_nullable.py  271044238ee1_.py  27542c0e6bd8_remove_configitem_table.py  3fb710fe0fe1_configitem_table.py  571892d95516_agent_config_table.py  580dfaf7e3f5_email_token_table.py  6147093c140b_process_timeouts_for_web_and_vnc_.py  690687d71334_agent_tracking.py  6eb79ba67acb_better_invitations_and_resets.py  7099debf8cda_store_start_addr_and_stop_addr_as_.py  7d9abd1be32c_natlasservices_table.py  997bbd9a505a_.py  9b9fdebcdcb8_add_scopelogs_to_db.py  a1738920a0d3_user_result_format_selection.py  aeb6c660a13a_.py  b8c40d66be2b_move_scripts_to_agent_config.py  b9aebd0a8593_rescantasks.py  c5cf61d816c9_add_results_per_page_and_preview_length_.py  d4685e98a91f_.py  e59d726ef9c1_scopetags.py  ed2f92f790d3_users_table.py
natlas-server/tests/: config.py  conftest.py  mock_webpack_manifest.json  test_errors.py  test_url_converters.py
natlas-server/tests/cli/: conftest.py  test_scope_cli.py
natlas-server/tests/elastic/: conftest.py  test_client.py  test_indices.py  test_interface.py
natlas-server/tests/email/: conftest.py  test_send_mail.py
natlas-server/tests/models/: conftest.py  test_scope.py  test_user.py  test_user_invitation.py
natlas-server/tests/scope/: conftest.py  test_cyclicprng.py  test_scan_manager.py  test_scope_manager.py
(+321 files in other folders)
