[project]
dependencies = [
  "natlas-libnmap~=0.7",
  "pillow~=11.0",
  "pydantic-settings~=2.7",
  "pydantic~=2.10",
  "python-dotenv~=1.0",
  "requests~=2.31",
  "sentry-sdk~=2.21"
]
name = "natlas-agent"
readme = "README.md"
requires-python = ">=3.12"
version = "0.6.12"

[tool.uv]
dev-dependencies = [
  "mypy~=1.14"
]
