[dependency-groups]
dev = [
  "mypy~=1.14",
  "pytest-flask~=1.3",
  "pytest~=8.3"
]

[project]
dependencies = [
  "cyclicprng~=0.2",
  "elasticsearch~=7.17",
  "email-validator~=1.1",
  "flask-login~=0.6",
  "flask-mail~=0.10",
  "flask-migrate~=4.0",
  "flask-sqlalchemy~=3.1",
  "flask-wtf~=1.2",
  "gunicorn~=23.0",
  "minio~=7.2",
  "natlas-libnmap~=0.7",
  "netaddr~=0.8",
  "opentelemetry-exporter-otlp~=1.23",
  "opentelemetry-instrumentation-flask~=0.50b0",
  "opentelemetry-sdk~=1.23",
  "pillow~=11.0",
  "psycopg[binary,pool]~=3.2",
  "pydantic-settings~=2.7",
  "pydantic~=2.10",
  "pyjwt~=2.0",
  "python-dateutil~=2.9",
  "semver~=3.0",
  "sentry-sdk~=1.14",
  "sympy~=1.8",
  "webpack-manifest~=2.1"
]
name = "natlas-server"
readme = "README.md"
requires-python = ">=3.12"
version = "0.6.12"
